Bug 309338 - flood of error boxes while renaming a folder in the folder panel
Summary: flood of error boxes while renaming a folder in the folder panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-31 18:58 UTC by Emmanuel Pescosta
Modified: 2012-10-31 21:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emmanuel Pescosta 2012-10-31 18:58:17 UTC
Flood of error boxes while renaming a folder in the folder panel. The error boxes appear when you rename the same folder several times.

This happens because the signals and slots in KItemListView::editRole(int index, const QByteArray& role) are not disconnected, before Dolphin connects them. So renaming the same folder several times ends in multiple roleEditingFinished slot calls.

1. Rename -> 1 Slot call
2. Rename -> 2 Slot calls
3. Rename -> 3 Slot calls 
....
n. Rename -> n Slot calls

Reproducible: Always

Steps to Reproduce:
1. Open a folder
2. Rename the folder in the Folder Panel
3. Rename the same folder in the Folder Panel -> 1 Error Box
4. Rename the same folder in the Folder Panel -> 2 Error Boxes
Actual Results:  
Flood of error boxes

Expected Results:  
No error box

Review-Request: https://git.reviewboard.kde.org/r/107070/
Comment 1 Emmanuel Pescosta 2012-10-31 21:44:15 UTC
Git commit ab82045a958590181c982677456b3743185ed28e by Emmanuel Pescosta.
Committed on 31/10/2012 at 22:43.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fix Bug 309338 - flood of error boxes while renaming a folder in the folder panel
FIXED-IN: 4.9.3
REVIEW: 107070

M  +15   -0    dolphin/src/kitemviews/kitemlistview.cpp
M  +7    -0    dolphin/src/kitemviews/kitemlistview.h

http://commits.kde.org/kde-baseapps/ab82045a958590181c982677456b3743185ed28e