Fix Bug 309338 - flood of error boxes while renaming a folder in the folder panel

BUG: 309338
FIXED-IN: 4.9.3
REVIEW: 107070